--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ereq",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "一个简单的 Ajax 客服端",
-  "main": "index.min.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
